# sound-walker

./: .gitignore  README.md
docs/: ARM嵌入式部署方案.md  三路线对比实验报告.md  声纹识别路线调研报告.md  声纹锁答辩PPT.pptx  声纹锁答辩PPT_v3.pptx  题目.txt
embed/: CMakeLists.txt  Makefile.arm  Makefile.rpi  README.md
embed/include/: audio_pcap.h  config.h  storage_mock.h  vad.h  voiceprint_verify.h
embed/scripts/: build.sh  deploy.sh  train_gmm_model.py
embed/src/: audio_pcap.c  mfcc_standalone.c  test_gmm.c  vad.c
embed/src/dsp/: gmm_svm.c  mfcc.c
embed/src/main/: main.c
embed/src/storage/: storage.c  storage_sqlite.c
embed/toolchain/: arm-none-linux-gnueabi.cmake
embed_v1/: Makefile  Makefile.pc  Makefile.rpi  README.md
embed_v1/include/: audio_capture.h  audio_preprocess.h  gmm_verify.h  mfcc.h  storage.h  voiceprint_verify.h
embed_v1/src/: gmm_verify.c  mfcc_compat.c  simple_test.c  storage_mock.c  test_pc.c  test_wav.c
embed_v1/src/audio/: audio_capture.c  audio_preprocess.c
embed_v1/src/dsp/: gmm_svm.c
embed_v1/src/main/: main.c
scripts/: compare_methods.py  serial_control.py  serial_transfer.py
tts/include/: tts.h
tts/src/: tts.c
